--- a/trafficForecast/pom.xml
+++ b/trafficForecast/pom.xml
@@ -9,23 +9,28 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>traffic-forecast</artifactId>
+    <artifactId>traffic.forecast</artifactId>
 
     <dependencies>
-        <!--<dependency>-->
-            <!--<groupId>com.turingdi</groupId>-->
-            <!--<artifactId>airports.browser</artifactId>-->
-            <!--<version>${com.turingdi.version}</version>-->
-        <!--</dependency>-->
         <dependency>
             <groupId>com.turingdi</groupId>
-            <artifactId>airports.app</artifactId>
+            <artifactId>airports.browser</artifactId>
             <version>${com.turingdi.version}</version>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.turingdi</groupId>-->
+            <!--<artifactId>airports.app</artifactId>-->
+            <!--<version>${com.turingdi.version}</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-springsecurity4</artifactId>
         </dependency>
     </dependencies>
 
