--- a/trafficForecast/src/main/resources/application.yml
+++ b/trafficForecast/src/main/resources/application.yml
@@ -11,7 +11,8 @@ spring:
 #数据源配置
   datasource:
     driverClassName : com.mysql.jdbc.Driver
-    url : jdbc:mysql://192.168.1.89:3306/learning?useUnicode=yes&characterEncoding=UTF-8&useSSL=false
+    # url : jdbc:mysql://192.168.1.89:3306/learning?useUnicode=yes&characterEncoding=UTF-8&useSSL=false
+    url : jdbc:mysql://127.0.0.1:3306/learning?useUnicode=yes&characterEncoding=UTF-8&useSSL=false
     username : root
     password : root
 
